--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -25,7 +25,9 @@
 					<div class="row hero-content">
 						<div class="col-md-12">
 							<h1 class="animated fadeInDown text-center">Hundreds of routes. One membership.</h1>
-
+							<div class="sub-wrapper text-center">
+							<p class="sub-headline text-center">Launching Spring 2016, ClimbCard gives you unrestricted access to Toronto’s best indoor rock climbing gyms.</p>
+							</div>
 
 <!-- Begin MailChimp Signup Form -->
 <section class="user-subscribe">
@@ -41,7 +43,7 @@
 	</div>
 
 	    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_62b58dfeef74782cefec4dfcc_894976712f" tabindex="-1" value=""></div>
-	    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button submit-to-mailchimp animated fadeInUp"></div>
+	    <div class="clear"><input type="submit" value="Notify Me" name="notify_me" id="mc-embedded-subscribe" class="button submit-to-mailchimp animated fadeInUp"></div>
 	    </div>
 	    	<div id="mce-responses" class="clear">
 			<div class="response" id="mce-error-response" style="display:none"></div>
@@ -65,21 +67,27 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-7 col-md-offset-3">
-						<h1>What is ClimbCard?</h1>
-							<p>Launching Spring 2016, ClimbCard is a membership that gives you unlimited access to Toronto’s best indoor climbing gyms. Whether you are new to climbing or a seasoned pro, you will never run out of new routes to challenge yourself with.</p>
-							<p>
-								Our network of climbing gyms has a wide array of bouldering, top-rope, and lead walls each with diverse and challenging routes. In addition, you get full access to the gyms amenities including change rooms, lockers, showers and lounge.
+						<h1>Start Your Climb</h1>
+							<p>Whether you are new to climbing or a seasoned pro, our network of partner gyms are designed to push your body and mind to the limit!
 							</p>
 							<p>
 								Follow us on <a href="https://facebook.com/climbcard"><span>FaceBook</span></a>, <a href="https://www.instagram.com/climbcard/"><span>Instagram</span></a> and <a href="https://twitter.com/climbcard"><span>Twitter</span></a> to get the latest ClimbCard Partner Gym announcements.
 							</p>
+
+							<div class="navicon social-icons">
+							<a href="https://twitter.com/climbcard"><i class="fa fa-twitter"></i></a>
+							<a href="https://facebook.com/climbcard"><i class="fa fa-facebook"></i></a>
+							<a href="https://www.instagram.com/climbcard/"><i class="fa fa-instagram"></i>
+						</a>
+						</div>
+
 						</div>
 				</div>
 			</div>
 		</section>
 
 		<!-- Start Your Climb -->
-	<section class="campaign">
+	<!-- <section class="campaign">
 		<div class="campaign-wrap">
 		<div class="texture-overlay"></div>
 			<div class="container-fluid">
@@ -92,14 +100,14 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 
 
 		<section class="benefits-list">
 			<div class="container">
-				<h1 class="section-title">What We Offer</h1>
+				<h1 class="section-title">Member Benefits</h1>
 				<div class="col-md-6 col-md-offset-3  text-center">
-				<p class="sub-section">ClimbCard is working hard to streamline your climbing experience. From registration to point of entry, we want our members to spend more time enjoying amazing benefits and perks.</p>
+				<p class="sub-section">ClimbCard is designed to improve every aspect of your climbing experience.</p>
 				</div>
 				<div class="row">
 						<div class="col-md-6 feature-1 wp2">
@@ -110,7 +118,7 @@
 							</div>
 							<div class="feature-content text-center">
 								<h1>Vast Network of Gyms</h1>
-								<p>Why stick to one gym when you can explore them all? ClimbCard gives you access to the largest network of climbing gyms each with their own unique experience.</p>
+								<p>Why stick to one gym when you can explore them all? ClimbCard gives you access to an amazing network of climbing gyms each with their own unique experience.</p>
 							</div>
 						</div>
 						<div class="col-md-6 feature-2 wp2 delay-05s">
@@ -134,7 +142,7 @@
 							</div>
 							<div class="feature-content text-center">
 								<h1>One Flat Fee</h1>
-								<p>Pay month-to-month and cancel anytime. If an unforseen circumstance arises, you can always put your membership on hold.</p>
+								<p>Our monthly membership is both flexible and affordable. Pay month-to-month and cancel anytime. Save money by climbing with ClimbCard.</p>
 							</div>
 						</div>
 						<div class="col-md-6 feature-3 wp2 delay-1s">
@@ -182,7 +190,7 @@
 
 		<section class="faq">
 			<div class="container">
-				<h1 class="section-title">Frequently asked questions</h1>
+				<h1 class="section-title">We Thought You Might Ask...</h1>
 				<div class="row">
 					<div class="col-md-6">
 						<h1>Are there any restrictions as to when I can climb?</h1>
@@ -214,8 +222,17 @@
 						</div>
 					</div>
 					<div class="col-md-7">
-						<ul class="footer-nav">
-							<li><a href="#features">Want to be Partner?</a></li>
+						<ul class="footer-nav text-right">
+							<li>
+								<%= link_to "Want To Be A Partner?", partner_path %>
+							</li>
+							<span class="divider"></span>
+							<div class="navicon social-icons">
+								<a href="https://twitter.com/climbcard"><i class="fa fa-twitter"></i></a>
+								<a href="https://facebook.com/climbcard"><i class="fa fa-facebook"></i></a>
+								<a href="https://www.instagram.com/climbcard/"><i class="fa fa-instagram"></i>
+								</a>
+						</div>
 						</ul>
 					</div>
 				</div>
