--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -596,7 +596,7 @@ Hero
 }
 
 .hero h1 {
-    margin: 230px 0 45px 0;
+    margin: 220px 0 0 0;
     font-weight: 300;
     font-size: 45px;
 }
@@ -604,6 +604,7 @@ Hero
     display: inline-block;
     color: #a1a9b0;
 }
+
 #home {
     width: 100%;
     height: 100%;
@@ -892,22 +893,20 @@ footer p {
     color: #c7cacc;
     font-size: 12px;
 }
-footer ul {
-    margin-top: 30px
-}
+
 footer li {
-    float: right;
-    margin-right: 15%;
+    display: inline-block;
     list-style: none;
     text-transform: uppercase;
     font-weight: 400;
+    line-height: 28px;
+    margin-right:10px;
 }
+
 footer li a {
-    color: #3f6184
+    color:#304040;
 }
-footer li:last-child {
-    margin-right: 0
-}
+
 
 /* ==========================================================================
 Nav Overlay
