--- a/app/views/pages/partner.html.erb
+++ b/app/views/pages/partner.html.erb
@@ -126,7 +126,7 @@
 					<div class="response" id="mce-success-response" style="display:none"></div>
 				</div>
 			    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_62b58dfeef74782cefec4dfcc_a27c6afad1" tabindex="-1" value=""></div>
-			    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button submit-partner-form"></div>
+			    <div class="clear"><input type="submit" value="Submit" name="Submit" id="mc-embedded-subscribe" class="button submit-partner-form"></div>
 			    </div>
 			</form>
 		</div>
@@ -147,7 +147,7 @@
 					</div>
 					<div class="col-md-7">
 						<ul class="footer-nav">
-							<li><a href="#features">Want to be Partner?</a></li>
+							<li><a href="#features">Want To Be A Partner?</a></li>
 						</ul>
 					</div>
 				</div>
