added footer partial

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -213,32 +213,14 @@
 				</div>
 			</div>
 		</section>
-		<footer>
-			<div class="container">
-				<div class="row">
-					<div class="col-md-5">
-						<div class="logo-wrap">
-							<%= image_tag "start-your-climb.png", class: "img-responsive", alt: "Start your climb" %>
-						</div>
-					</div>
-					<div class="col-md-7">
-						<ul class="footer-nav text-right">
-							<li>
-								<%= link_to "Want To Be A Partner?", partner_path %>
-							</li>
-							<span class="divider"></span>
-							<div class="navicon social-icons">
-								<a href="https://twitter.com/climbcard"><i class="fa fa-twitter"></i></a>
-								<a href="https://facebook.com/climbcard"><i class="fa fa-facebook"></i></a>
-								<a href="https://www.instagram.com/climbcard/"><i class="fa fa-instagram"></i>
-								</a>
-						</div>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</footer>
-		<div class="overlay overlay-boxify">
+		
+		<!-- Footer -->
+
+		<%= render "layouts/partials/external_footer" %>
+		
+		<!-- / Footer -->
+
+		<!-- <div class="overlay overlay-boxify">
 			<nav>
 				<ul>
 					<li><a href="#about"><i class="fa fa-heart"></i>About</a></li>
@@ -249,7 +231,7 @@
 					<li><a href="#download"><i class="fa fa-download"></i>Download</a></li>
 				</ul>
 			</nav>
-		</div>
+		</div> -->
 
 		<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 		<script>
