--- a/app/views/pages/partner.html.erb
+++ b/app/views/pages/partner.html.erb
@@ -137,19 +137,8 @@
 	</div>
 </section>
 
-<footer>
-			<div class="container">
-				<div class="row">
-					<div class="col-md-5">
-						<div class="logo-wrap">
-							<%= image_tag "start-your-climb.png", class: "img-responsive", alt: "Start your climb" %>
-						</div>
-					</div>
-					<div class="col-md-7">
-						<ul class="footer-nav">
-							<li><a href="#features">Want To Be A Partner?</a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</footer>
+<!-- Footer -->
+
+<%= render "layouts/partials/external_footer" %>
+
+<!-- / Footer -->
