--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -68,11 +68,9 @@
 				<div class="row">
 					<div class="col-md-7 col-md-offset-3">
 						<h1>Start Your Climb</h1>
-							<p>Whether you are new to climbing or a seasoned pro, our network of partner gyms are designed to push your body and mind to the limit!
-							</p>
-							<p>
-								Follow us on <a href="https://facebook.com/climbcard"><span>FaceBook</span></a>, <a href="https://www.instagram.com/climbcard/"><span>Instagram</span></a> and <a href="https://twitter.com/climbcard"><span>Twitter</span></a> to get the latest ClimbCard Partner Gym announcements.
-							</p>
+							<p>Whether you're new to climbing or a seasoned pro, our network of partner gyms are designed to push your body and mind to the limit!</p>
+							<p>Have you got what it takes to make it to the top?</p>
+							<p>Follow us for all the latest ClimbCard announcements!</p>
 
 							<div class="navicon social-icons">
 							<a href="https://twitter.com/climbcard"><i class="fa fa-twitter"></i></a>
@@ -153,7 +151,7 @@
 							</div>
 							<div class="feature-content text-center">
 								<h1>Health &amp; Wellness</h1>
-								<p>Climbing requires strength, mental toughness, and precision technique. Break out of your boring gym routine and bring your fitness to new heights!</p>
+								<p>Climbing requires strength, mental toughness, and rigorous technique. Break out of your boring gym routing and elevate your fitness to new heights!</p>
 							</div>
 						</div>
 					</div>
@@ -213,6 +211,32 @@
 				</div>
 			</div>
 		</section>
+
+		<section class="callToAction">
+			<h1 class="section-title text-center">Tune in for our official launch!</h1>
+			<section class="user-subscribe">
+				<div id="mc_embed_signup">
+				<form action="//climbcard.us12.list-manage.com/subscribe/post?u=62b58dfeef74782cefec4dfcc&amp;id=894976712f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate text-center" target="_blank" novalidate>
+				    <div id="mc_embed_signup_scroll">
+					
+				<div class="mc-field-group">
+					<input type="email" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL" placeholder="Enter Email">
+				</div>
+				<div class="mc-field-group">
+					<input type="text" value="" name="PCODE" class="required postalCode form-control" id="mce-PCODE" placeholder="Postal Code">
+				</div>
+
+				    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_62b58dfeef74782cefec4dfcc_894976712f" tabindex="-1" value=""></div>
+				    <div class="clear"><input type="submit" value="Notify Me" name="notify_me" id="mc-embedded-subscribe" class="button submit-to-mailchimp"></div>
+				    </div>
+				    	<div id="mce-responses" class="clear">
+						<div class="response" id="mce-error-response" style="display:none"></div>
+						<div class="response" id="mce-success-response" style="display:none"></div>
+					</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+				</form>
+				</div>
+			</section>
+		</section> <!--callToAction-->
 		
 		<!-- Footer -->
 
