--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,7 +11,7 @@
 						<div class="col-md-6 col-sm-6 col-xs-6 text-left">
 								<div class="main-logo">
 								<%= link_to root_path do %>
-									<%= image_tag "climbcard-white-logo.png", class: "img-responsive", alt: "Boxify Logo" %>
+									<%= image_tag "green_white_mountain.png", class: "img-responsive", alt: "Boxify Logo" %>
 								<% end %>
 							</div>
 						</div>
@@ -70,14 +70,13 @@
 						<h1>Start Your Climb</h1>
 							<p>Whether you're new to climbing or a seasoned pro, our network of partner gyms are designed to push your body and mind to the limit!</p>
 							<p>Have you got what it takes to make it to the top?</p>
-							<p>Follow us for all the latest ClimbCard announcements!</p>
 
-							<div class="navicon social-icons">
+							<!-- <div class="navicon social-icons">
 							<a href="https://twitter.com/climbcard"><i class="fa fa-twitter"></i></a>
 							<a href="https://facebook.com/climbcard"><i class="fa fa-facebook"></i></a>
 							<a href="https://www.instagram.com/climbcard/"><i class="fa fa-instagram"></i>
 						</a>
-						</div>
+						</div> -->
 
 						</div>
 				</div>
@@ -105,7 +104,6 @@
 			<div class="container">
 				<h1 class="section-title">Member Benefits</h1>
 				<div class="col-md-6 col-md-offset-3  text-center">
-				<p class="sub-section">ClimbCard is designed to improve every aspect of your climbing experience.</p>
 				</div>
 				<div class="row">
 						<div class="col-md-6 feature-1 wp2">
@@ -127,7 +125,7 @@
 							</div>
 							<div class="feature-content text-center">
 								<h1>No Restrictions</h1>
-								<p> Have you got what it takes to make it to the top? Practice as much as you want 7 days a week.</p>
+								<p>Climb as much as you want, 7 days a week. We want you to spend as much time as possible enjoying the sport you love!</p>
 							</div>
 						</div>
 					</div>
@@ -230,13 +228,14 @@
 				    <div class="clear"><input type="submit" value="Notify Me" name="notify_me" id="mc-embedded-subscribe" class="button submit-to-mailchimp"></div>
 				    </div>
 				    	<div id="mce-responses" class="clear">
-						<div class="response" id="mce-error-response" style="display:none"></div>
-						<div class="response" id="mce-success-response" style="display:none"></div>
-					</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+								<div class="response" id="mce-error-response" style="display:none"></div>
+								<div class="response" id="mce-success-response" style="display:none"></div>
+							</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 				</form>
 				</div>
 			</section>
 		</section> <!--callToAction-->
+
 		
 		<!-- Footer -->
 
