--- a/app/views/pages/partner.html.erb
+++ b/app/views/pages/partner.html.erb
@@ -5,7 +5,7 @@
 							<div class="col-md-6 col-sm-6 col-xs-6 text-left">
 									<div class="main-logo">
 									<%= link_to root_path do %>
-										<%= image_tag "climbcard-white-logo.png", class: "img-responsive", alt: "Boxify Logo" %>
+										<%= image_tag "new_white_logo.png", class: "img-responsive", alt: "Boxify Logo" %>
 									<% end %>
 								</div>
 							</div>
@@ -37,7 +37,7 @@
 						<div class="col-md-3 feature-1 wp2">
 							<div class="text-center">
 								<div class="feature-icon">
-									<i class="fa fa-heart-o"></i>
+									<i class="fa fa-male"></i>
 								</div>
 							</div>
 							<div class="feature-content text-center">
@@ -48,7 +48,7 @@
 						<div class="col-md-3 feature-2 wp2 delay-05s">
 							<div class="text-center">
 								<div class="feature-icon">
-									<i class="fa fa-star-o"></i>
+									<i class="fa fa-line-chart"></i>
 								</div>
 							</div>
 							<div class="feature-content text-center">
@@ -60,7 +60,7 @@
 						<div class="col-md-3 feature-3 wp2 delay-1s">
 							<div class="text-center">
 								<div class="feature-icon">
-									<i class="fa fa-credit-card"></i>
+									<i class="fa fa-bullhorn"></i>
 								</div>
 							</div>
 							<div class="feature-content text-center">
@@ -71,7 +71,7 @@
 						<div class="col-md-3 feature-3 wp2 delay-1s">
 							<div class="text-center">
 								<div class="feature-icon">
-									<i class="fa fa-medkit"></i>
+									<i class="fa fa-desktop"></i>
 								</div>
 							</div>
 							<div class="feature-content text-center">
