--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,8 +23,8 @@
  @import "font-awesome";
 
  .main-logo {
- 	height: 65px;
- 	width: 65px;
+ 	height: 70px;
+ 	width: 70px;
  }
 
 .nav-toggle span, .nav-toggle span:before, .nav-toggle span:after {
@@ -35,9 +35,12 @@
 
 .sub-headline {
 	padding:0 20px;
-	margin:40px 0;
+	margin:40px 0 80px 0;
 	display: inline-block;
-  width: 50%;
+  width: 60%;
+  font-size: 23px;
+  font-weight: 200;
+  line-height: 1.4;
 }
 
 
@@ -59,18 +62,11 @@
 	}
 		
 	a:hover {
-		color: #73d0da;
+		color:#acfe2e;
 	}
 			
 }
 
-.climbcard-intro {
-
-	.social-icons a {
-		color: #304040;
-	}
-
-}
 
 
 .user-subscribe {
@@ -156,9 +152,8 @@
   transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 
   &:hover {
-  	background: #73d0da;
-  	border:1px solid #73d0da;
-  	color:#fff;
+  	background: #acfe2e;
+  	border:1px solid #acfe2e;
   }
 
 }
@@ -235,18 +230,13 @@ div#mce-responses {
 	
 	.social-icons {
 		display: inline-block;
+		font-size: 17px;
 	}
 
 	.social-icons a {
-		color: #304040;
+		color: #abfd2d;
 	}
 
-	.divider {
-		width: 2px;
-    height: 14px;
-    background: #304040;
-    display: inline-block;
-	}
 
 }
 
@@ -339,11 +329,12 @@ header i {
 }
 
 .callToAction {
-	background:#ddd;
+	background:#373737;
 	padding:40px 0;
 
  .section-title {
 		margin-bottom: 40px;
+		color:#abfd2d;
 	}
 }
 
