--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -34,8 +34,8 @@
 
 
 .sub-headline {
-	padding:0 20px;
-	margin:40px 0 80px 0;
+	// padding:0 20px;
+	margin: 30px 0 60px 0;
 	display: inline-block;
   width: 60%;
   font-size: 23px;
@@ -222,21 +222,22 @@ div#mce-responses {
 // Footer
 
 .logo-wrap {
-	height:auto;
-	width:250px;
+	height:70px;
+	width:70px;
+
 }
 
-.footer-nav {
+footer {
 	
 	.social-icons {
 		display: inline-block;
 		font-size: 17px;
+		margin-right:-7px;
 	}
 
 	.social-icons a {
 		color: #abfd2d;
 	}
-
 
 }
 
