--- a/app/views/layouts/partials/_external_footer.html.erb
+++ b/app/views/layouts/partials/_external_footer.html.erb
@@ -3,7 +3,7 @@
 				<div class="row">
 					<div class="col-md-5">
 						<div class="logo-wrap">
-							<%= image_tag "footer_logo.png", class: "img-responsive", alt: "Start your climb" %>
+							<%= image_tag "new_white_logo.png", class: "img-responsive footer-logo", alt: "Start your climb" %>
 						</div>
 					</div>
 					<div class="col-md-7">
