--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,7 +11,7 @@
 						<div class="col-md-6 col-sm-6 col-xs-6 text-left">
 								<div class="main-logo">
 								<%= link_to root_path do %>
-									<%= image_tag "green_white_mountain.png", class: "img-responsive", alt: "Boxify Logo" %>
+									<%= image_tag "new_white_logo.png", class: "img-responsive", alt: "Boxify Logo" %>
 								<% end %>
 							</div>
 						</div>
@@ -24,15 +24,15 @@
 					</div>
 					<div class="row hero-content">
 						<div class="col-md-12">
-							<h1 class="animated fadeInDown text-center">Hundreds of routes. One membership.</h1>
-							<div class="sub-wrapper text-center">
-							<p class="sub-headline text-center">Launching Spring 2016, ClimbCard gives you unrestricted access to Toronto’s best indoor rock climbing gyms.</p>
+							<h1 class="animated fadeInDown">Hundreds of routes. One membership.</h1>
+							<div class="sub-wrapper">
+							<p class="sub-headline">Launching Spring 2016, ClimbCard gives you unrestricted access to Toronto’s best indoor rock climbing gyms.</p>
 							</div>
 
 <!-- Begin MailChimp Signup Form -->
 <section class="user-subscribe">
 	<div id="mc_embed_signup">
-	<form action="//climbcard.us12.list-manage.com/subscribe/post?u=62b58dfeef74782cefec4dfcc&amp;id=894976712f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate text-center" target="_blank" novalidate>
+	<form action="//climbcard.us12.list-manage.com/subscribe/post?u=62b58dfeef74782cefec4dfcc&amp;id=894976712f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 	    <div id="mc_embed_signup_scroll">
 		
 	<div class="mc-field-group">
@@ -64,20 +64,24 @@
 
 		<!-- Description of Climbcard -->
 		<section class="climbcard-intro">
-			<div class="container">
+			<div class="container-fluid">
 				<div class="row">
-					<div class="col-md-7 col-md-offset-3">
-						<h1>Start Your Climb</h1>
-							<p>Whether you're new to climbing or a seasoned pro, our network of partner gyms are designed to push your body and mind to the limit!</p>
-							<p>Have you got what it takes to make it to the top?</p>
+					<div class="col-md-4">
+						<%= image_tag "guy_on_wall.png", alt: "Start your climb" %>
+					</div>
+					<div class="col-md-7 col-sm-6 col-xs-12">
+							<div class="content-wrapper">
+							<h1>Start Your Climb</h1>
+								<p>Whether you're new to climbing or a seasoned pro, our network of partner gyms are designed to push your body and mind to the limit!</p>
+								<p>Have you got what it takes to make it to the top?</p>
 
-							<!-- <div class="navicon social-icons">
-							<a href="https://twitter.com/climbcard"><i class="fa fa-twitter"></i></a>
-							<a href="https://facebook.com/climbcard"><i class="fa fa-facebook"></i></a>
-							<a href="https://www.instagram.com/climbcard/"><i class="fa fa-instagram"></i>
-						</a>
-						</div> -->
-
+								<!-- <div class="navicon social-icons">
+								<a href="https://twitter.com/climbcard"><i class="fa fa-twitter"></i></a>
+								<a href="https://facebook.com/climbcard"><i class="fa fa-facebook"></i></a>
+								<a href="https://www.instagram.com/climbcard/"><i class="fa fa-instagram"></i>
+							</a>
+							</div> -->
+							</div>
 						</div>
 				</div>
 			</div>
@@ -103,10 +107,9 @@
 		<section class="benefits-list">
 			<div class="container">
 				<h1 class="section-title">Member Benefits</h1>
-				<div class="col-md-6 col-md-offset-3  text-center">
-				</div>
 				<div class="row">
-						<div class="col-md-6 feature-1 wp2">
+						
+						<div class="col-md-3 feature-1 wp2">
 							<div class="text-center">
 								<div class="feature-icon">
 									<i class="fa fa-heart-o"></i>
@@ -117,7 +120,8 @@
 								<p>Why stick to one gym when you can explore them all? ClimbCard gives you access to an amazing network of climbing gyms each with their own unique experience.</p>
 							</div>
 						</div>
-						<div class="col-md-6 feature-2 wp2 delay-05s">
+
+						<div class="col-md-3 feature-2 wp2 delay-05s">
 							<div class="text-center">
 								<div class="feature-icon">
 									<i class="fa fa-star-o"></i>
@@ -128,9 +132,8 @@
 								<p>Climb as much as you want, 7 days a week. We want you to spend as much time as possible enjoying the sport you love!</p>
 							</div>
 						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-6 feature-3 wp2 delay-1s">
+
+						<div class="col-md-3 feature-3 wp2 delay-1s">
 							<div class="text-center">
 								<div class="feature-icon">
 									<i class="fa fa-credit-card"></i>
@@ -141,7 +144,7 @@
 								<p>Our monthly membership is both flexible and affordable. Pay month-to-month and cancel anytime. Save money by climbing with ClimbCard.</p>
 							</div>
 						</div>
-						<div class="col-md-6 feature-3 wp2 delay-1s">
+						<div class="col-md-3 feature-4 wp2 delay-1.5s">
 							<div class="text-center">
 								<div class="feature-icon">
 									<i class="fa fa-medkit"></i>
@@ -152,7 +155,7 @@
 								<p>Climbing requires strength, mental toughness, and rigorous technique. Break out of your boring gym routing and elevate your fitness to new heights!</p>
 							</div>
 						</div>
-					</div>
+				</div> <!--/row-->
 			</div>
 		</section>
 
