--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -62,47 +62,6 @@
 			</section>
 		</header>
 
-		<!-- Description of Climbcard -->
-		<section class="climbcard-intro">
-			<div class="container-fluid">
-				<div class="row">
-					<div class="col-md-4">
-						<%= image_tag "guy_on_wall.png", alt: "Start your climb" %>
-					</div>
-					<div class="col-md-7 col-sm-6 col-xs-12">
-							<div class="content-wrapper">
-							<h1>Start Your Climb</h1>
-								<p>Whether you're new to climbing or a seasoned pro, our network of partner gyms are designed to push your body and mind to the limit!</p>
-								<p>Have you got what it takes to make it to the top?</p>
-
-								<!-- <div class="navicon social-icons">
-								<a href="https://twitter.com/climbcard"><i class="fa fa-twitter"></i></a>
-								<a href="https://facebook.com/climbcard"><i class="fa fa-facebook"></i></a>
-								<a href="https://www.instagram.com/climbcard/"><i class="fa fa-instagram"></i>
-							</a>
-							</div> -->
-							</div>
-						</div>
-				</div>
-			</div>
-		</section>
-
-		<!-- Start Your Climb -->
-	<!-- <section class="campaign">
-		<div class="campaign-wrap">
-		<div class="texture-overlay"></div>
-			<div class="container-fluid">
-				<div class="row">
-					<div class="col-md-12">
-						<div class="brand-hashtag text-center">
-							<h1>#startYourClimb</h1>
-						</div>
-					</div>	
-				</div>
-			</div>
-		</div>
-	</section> -->
-
 
 		<section class="benefits-list">
 			<div class="container">
@@ -117,7 +76,7 @@
 							</div>
 							<div class="feature-content text-center">
 								<h1>Vast Network of Gyms</h1>
-								<p>Why stick to one gym when you can explore them all? ClimbCard gives you access to an amazing network of climbing gyms each with their own unique experience.</p>
+								<p>ClimbCard gives you access to an amazing network of climbing gyms each with their own unique experience.</p>
 							</div>
 						</div>
 
@@ -129,7 +88,7 @@
 							</div>
 							<div class="feature-content text-center">
 								<h1>No Restrictions</h1>
-								<p>Climb as much as you want, 7 days a week. We want you to spend as much time as possible enjoying the sport you love!</p>
+								<p>Climb as much as you want, 7 days a week.</p>
 							</div>
 						</div>
 
@@ -141,10 +100,10 @@
 							</div>
 							<div class="feature-content text-center">
 								<h1>One Flat Fee</h1>
-								<p>Our monthly membership is both flexible and affordable. Pay month-to-month and cancel anytime. Save money by climbing with ClimbCard.</p>
+								<p>Our membership is both flexible and affordable. Pay month-to-month and cancel anytime.</p>
 							</div>
 						</div>
-						<div class="col-md-3 feature-4 wp2 delay-1.5s">
+						<div class="col-md-3 feature-4 wp2 delay-15s">
 							<div class="text-center">
 								<div class="feature-icon">
 									<i class="fa fa-medkit"></i>
@@ -161,18 +120,11 @@
 
 
 		<section class="showcase">
-			<div class="showcase-wrap">
-				<div class="texture-overlay"></div>
+			<div class="iphone-wallet">
 				<div class="container">
 					<div class="row">
 						<div class="col-md-6">
-							<div class="device wp3">
-								<div class="device-content">
-									<div class="showcase-slider">
-										<%= image_tag "climbcard-wallet.jpg", alt: "Climbcard Wallet iOS" %>
-									</div>
-								</div>
-							</div>
+								<%= image_tag "iphone_wallet.png", alt: "Climbcard Wallet iOS" %>
 						</div>
 						<div class="col-md-6">
 							<h1>ClimbCard is Fast, Easy, &amp; Convenient!</h1>
@@ -186,6 +138,25 @@
 				</div>
 			</div>
 		</section>
+
+		<!-- Parallax -->
+
+		<section class="parallax">
+			<div class="parallax-wrap">
+				<div class="texture-overlay"></div>
+				<div class="container">
+					<div class="row">
+						<div class="col-md-12">
+
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+
+		<!-- /Parallax -->
+
 
 		<section class="faq">
 			<div class="container">
